language_tests/source_files/valid/blanket_impl_generic_eq_no_move.tr
struct Boxed {
    value: string
}

impl std.ops.PartialEq for Boxed {
    public func eq(&self, _ other: &Boxed) -> bool {
        self.value == other.value
    }
}

func compareThenReuse[T: std.ops.PartialEq](_ a: T, _ b: T) -> bool {
    let same = a == b
    let _keep = &a
    same
}

func main() {
    let a = Boxed { value: "a" }
    let b = Boxed { value: "a" }
    assert(compareThenReuse(a, b), "generic comparison should not move operands")
    std.print("ok\n")
}
